--- a/package.json
+++ b/package.json
@@ -6,13 +6,34 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
+    "@testing-library/jest-dom": "^6.1.0",
+    "@testing-library/react": "^14.0.0",
+    "antd": "^5.8.4",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
+    "jest": "^29.6.3",
     "next": "13.4.19",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.1.2",
+    "reactstrap": "^9.2.0",
+    "redux": "^4.2.1",
+    "redux-mock-store": "^1.5.4"
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.22.10",
+    "@babel/preset-react": "^7.22.5",
+    "babel-jest": "^29.6.3",
+    "jest-environment-jsdom": "^29.6.3"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.(js|jsx)$": "babel-jest"
+    },
+    "testEnvironment": "jsdom"
   }
 }
